Fixed ActiveRoute clipping

--- a/widgets/text/ActiveRouteTextHtmlWidget/ActiveRouteTextHtmlWidget.css
+++ b/widgets/text/ActiveRouteTextHtmlWidget/ActiveRouteTextHtmlWidget.css
@@ -124,7 +124,6 @@
   display: flex;
   align-items: baseline;
   justify-content: center;
-  gap: 0.14em;
   line-height: 1;
   min-height: 0
 }
